--- a/test.bib
+++ b/test.bib
@@ -6,29 +6,11 @@ YEAR="2100",
 }
 
 @misc{cryptoeprint:2014:725,
-    author = {Ruan de Clercq, Sujoy Sinha Roy, Frederik Vercauteren, Ingrid Verbauwhede},
+    author = {Ruan de Clercq and Sujoy Sinha Roy and Frederik Vercauteren and Ingrid Verbauwhede},
     title = {Efficient Software Implementation of Ring-LWE Encryption},
     howpublished = {Cryptology ePrint Archive, Report 2014/725},
     year = {2014},
     note = {\url{https://eprint.iacr.org/2014/725}},
-}
-
-@inproceedings{Gottert:2012:DHB:2413316.2413355,
- author = {G\"{o}ttert, Norman and Feller, Thomas and Schneider, Michael and Buchmann, Johannes and Huss, Sorin},
- title = {On the Design of Hardware Building Blocks for Modern Lattice-based Encryption Schemes},
- booktitle = {Proceedings of the 14th International Conference on Cryptographic Hardware and Embedded Systems},
- series = {CHES'12},
- year = {2012},
- isbn = {978-3-642-33026-1},
- location = {Leuven, Belgium},
- pages = {512--529},
- numpages = {18},
- url = {http://dx.doi.org/10.1007/978-3-642-33027-8_30},
- doi = {10.1007/978-3-642-33027-8_30},
- acmid = {2413355},
- publisher = {Springer-Verlag},
- address = {Berlin, Heidelberg},
- keywords = {FPGA, LWE, hardware, lattice-based encryption},
 }
 
 @inproceedings{Regev:2005:LLE:1060590.1060603,
@@ -47,7 +29,25 @@ YEAR="2100",
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {computational learning theory, cryptography, lattices, public key encryption, quantum computing, statistical queries},
-} 
+}
+
+@inproceedings{Gottert:2012:DHB:2413316.2413355,
+ author = {G\"{o}ttert, Norman and Feller, Thomas and Schneider, Michael and Buchmann, Johannes and Huss, Sorin},
+ title = {On the Design of Hardware Building Blocks for Modern Lattice-based Encryption Schemes},
+ booktitle = {Proceedings of the 14th International Conference on Cryptographic Hardware and Embedded Systems},
+ series = {CHES'12},
+ year = {2012},
+ isbn = {978-3-642-33026-1},
+ location = {Leuven, Belgium},
+ pages = {512--529},
+ numpages = {18},
+ url = {http://dx.doi.org/10.1007/978-3-642-33027-8_30},
+ doi = {10.1007/978-3-642-33027-8_30},
+ acmid = {2413355},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {FPGA, LWE, hardware, lattice-based encryption}, 
+}
 
 @misc{cryptoeprint:2012:230,
     author = {Vadim Lyubashevsky and Chris Peikert and Oded Regev},
@@ -56,4 +56,3 @@ YEAR="2100",
     year = {2012},
     note = {\url{https://eprint.iacr.org/2012/230}},
 }
-
